Update AI packages and refactor AddAIAgent method
Updated `Azure.AI.OpenAI` to `2.7.0-beta.2`, `Microsoft.Agents.AI.Hosting` to `1.0.0-preview.251204.1`, and `Microsoft.Agents.AI.OpenAI` to `1.0.0-preview.251204.1` in `AgentBasicService.csproj`.

Refactored `builder.Services.AddAIAgent` in `Program.cs` to move `Instructions` into a new `ChatOptions` object. Improved code formatting for `InMemoryChatMessageStore` instantiation without changing functionality.

--- a/AgentBasicService/AgentBasicService.csproj
+++ b/AgentBasicService/AgentBasicService.csproj
@@ -8,9 +8,9 @@
     </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Azure.AI.OpenAI" Version="2.1.0" />
-		<PackageReference Include="Microsoft.Agents.AI.Hosting" Version="1.0.0-preview.251125.1" />
-		<PackageReference Include="Microsoft.Agents.AI.OpenAI" Version="1.0.0-preview.251125.1" />
+		<PackageReference Include="Azure.AI.OpenAI" Version="2.7.0-beta.2" />
+		<PackageReference Include="Microsoft.Agents.AI.Hosting" Version="1.0.0-preview.251204.1" />
+		<PackageReference Include="Microsoft.Agents.AI.OpenAI" Version="1.0.0-preview.251204.1" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="10.0.1" />
 		<PackageReference Include="TinyHelpers.AspNetCore" Version="4.1.10" />
