Switch to OpenAI SDK from Azure.AI.OpenAI
Replaced Azure.AI.OpenAI with OpenAI SDK for chat client integration. Updated Program.cs to use OpenAIClient and ApiKeyCredential. Removed Azure.AI.OpenAI package reference. Added endpoint format comment to appsettings.json.

--- a/AgentBasicService/appsettings.json
+++ b/AgentBasicService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AzureOpenAI": {
-    "Endpoint": "",
+    "Endpoint": "", // it must end with /openai/v1/
     "Deployment": "",
     "ApiKey": ""
   },
