Update to Azure.AI.OpenAI and add required packages
Refactored Program.cs to use AzureOpenAIClient and AzureKeyCredential for chat client integration. Added new NuGet package references for OpenAI, Agents.AI, OpenAPI, SwaggerUI, and TinyHelpers. Cleaned up appsettings.json by removing a comment from the AzureOpenAI endpoint.

--- a/AgentBasicService/appsettings.json
+++ b/AgentBasicService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AzureOpenAI": {
-    "Endpoint": "", // it must end with /openai/v1/
+    "Endpoint": "",
     "Deployment": "",
     "ApiKey": ""
   },
