--- a/WorkflowBasicSample/WorkflowBasicSample.csproj
+++ b/WorkflowBasicSample/WorkflowBasicSample.csproj
@@ -8,8 +8,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Agents.AI.Hosting" Version="1.0.0-preview.260205.1" />
-		<PackageReference Include="Microsoft.Agents.AI.Workflows" Version="1.0.0-preview.260205.1" />
+		<PackageReference Include="Azure.AI.OpenAI" Version="2.8.0-beta.1" />
+		<PackageReference Include="DocumentFormat.OpenXml" Version="3.4.1" />
+		<PackageReference Include="Microsoft.Agents.AI.Hosting" Version="1.0.0-preview.260212.1" />
+		<PackageReference Include="Microsoft.Agents.AI.OpenAI" Version="1.0.0-preview.260212.1" />
+		<PackageReference Include="Microsoft.Agents.AI.Workflows" Version="1.0.0-preview.260212.1" />
+		<PackageReference Include="SearchPioneer.Lingua" Version="1.0.5" />
 	</ItemGroup>
 
 </Project>
