--- a/AgentBasicService/AgentBasicService.csproj
+++ b/AgentBasicService/AgentBasicService.csproj
@@ -8,11 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Agents.AI.Hosting" Version="1.0.0-preview.260212.1" />
-        <PackageReference Include="Microsoft.Agents.AI.OpenAI" Version="1.0.0-preview.260212.1" />
+        <PackageReference Include="Microsoft.Agents.AI.Hosting" Version="1.0.0-preview.260219.1" />
+        <PackageReference Include="Microsoft.Agents.AI.OpenAI" Version="1.0.0-rc1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.3" />
-        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="10.1.3" />
-        <PackageReference Include="TinyHelpers.AspNetCore" Version="4.1.17" />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="10.1.4" />
+        <PackageReference Include="TinyHelpers.AspNetCore" Version="4.1.18" />
     </ItemGroup>
 
 </Project>
